*更新部分语言包和提示信息

--- a/src/locales/langs/cn.json
+++ b/src/locales/langs/cn.json
@@ -41,5 +41,8 @@
   "newYear": "新年",
   "capture": "抓取",
   "autoplay": "自动播放",
-  "controls": "控制"
+  "controls": "控制",
+  "prompt": "提示",
+  "remove": "删除",
+  "success": "成功"
 }
