*新增互动功能，优化部分代码

--- a/src/locales/langs/cn.json
+++ b/src/locales/langs/cn.json
@@ -12,6 +12,7 @@
   "iframe": "框架",
   "bullet": "弹幕",
   "rolling": "滚屏",
+  "interactive": "互动",
   "global": "全局",
   "container": "容器",
   "background": "背景",
