--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -12,6 +12,7 @@
   "iframe": "Iframe",
   "bullet": "Bullet",
   "rolling": "Rolling",
+  "interactive": "Interactive",
   "global": "Global",
   "container": "Container",
   "background": "Background",
