*互动新增横幅宽度设置，START按钮下移

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -45,5 +45,6 @@
   "controls": "Controls",
   "prompt": "Prompt",
   "remove": "Remove",
-  "success": "Success"
+  "success": "Success",
+  "banner": "Banner"
 }
