*滚屏功能增加多个设置

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -46,5 +46,6 @@
   "prompt": "Prompt",
   "remove": "Remove",
   "success": "Success",
-  "banner": "Banner"
+  "banner": "Banner",
+  "avatar": "Avatar"
 }
