* 弹幕与滚屏新增清除全部消息功能

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -47,5 +47,7 @@
   "remove": "Remove",
   "success": "Success",
   "banner": "Banner",
-  "avatar": "Avatar"
+  "avatar": "Avatar",
+  "clear": "Clear",
+  "all": "All"
 }
